--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Frontend</title>
-  <base href="/">
+  <base href="https://roblui.github.io/frontend_new/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--LOADING SCRIPT-->
