--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="main">
     <app-root>Loading...</app-root>
   </div>
-
+  <router-outlet></router-outlet>
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 
 </html>
